--- a/WEEK1/index.html
+++ b/WEEK1/index.html
@@ -15,7 +15,7 @@
             
             <br><br>Rotterdam, Netherlands
             <br>Mobile Phone: (+32) 465 716645
-            <br>sph_cml1974@outlook.com
+            <br>sph_1974@outlook.com
             </p></div>
         <div class="two"><img width=150px src="Cemal1.jpg"></div>
         <div class="three"><h4>Professional Summary</h4><p>22 years of experience, in national and international organizations with an excellent academic background. <b>As a Business Analyst:</b> Interacting with the stakeholders and subject matter experts in order to understand their problems and needs. Gathering documents and analyzing business needs and requirements. Building integrated data sets, making analysis, and make visualizations by using the necessary tools. Finally building reports for internal/external customers. <b>As a Project Manager:</b> Planning, coordinating and managing the national, international and multilateral projects.</p></div>
